adjust the Button spacing issue

--- a/OMS Front End/src/components/ui/button/Buttons.scss
+++ b/OMS Front End/src/components/ui/button/Buttons.scss
@@ -31,7 +31,9 @@
   }
 
   span {
-    margin-left: 8px;
+    &.label-l-space{
+      margin-left: 8px;
+    }
   }
 
   &.theme-button {
